# juno

./: .gitignore  404.html  BeamTest.yml  Configuration.md  Documentation.md  LICENSE  NOTES.md  README.md  TODO.md  TUTORIAL.md  environment.yml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
Configuration/: index.html
Documentation/: index.html
TUTORIAL/: index.html
docs/: Configuration.md  Documentation.md  TUTORIAL.md  index.md  reference.md  started.md
juno/: Lens.py  Medium.py  Simulation.py  SimulationRunner.py  _version.py  beam.py  constants.py  notebook.ipynb  plotting.py  run_simulation.py  structures.py  utils.py  validation.py
juno.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
juno/example/: sim_axicon_2d.yaml  sim_gaussian_2d.yaml  sim_telescope_2d.yaml
juno/juno_custom/: README.md  herschel_example.ipynb  herschel_example_diff.ipynb  herschel_example_higherna _488.ipynb  herschel_example_higherna _488_1 copy.ipynb  herschel_example_higherna _488_1.ipynb  herschel_example_higherna _488_2 copy.ipynb  herschel_example_higherna _488_2.ipynb  herschel_example_higherna _488_lightpipes.ipynb  herschel_example_higherna _488_sine.ipynb  herschel_example_higherna _655.ipynb  herschel_example_higherna.ipynb  herschelscratch.ipynb  herschelsim copy.ipynb  herschelsim.ipynb  main.py  system_config.yaml  thesis_exponents.ipynb  user_interface.py  utils.py
juno/juno_custom/elements/: available_elements.py  axicon.py  element_template.py  lattice.py  microlens.py  test.py
juno/juno_custom/legacy/: element_template.py  user_interface.py
juno/juno_custom/tools/: element_tools.py  sim_tools.py
juno/juno_custom/ui/: main.py  main.ui
juno/lightsheet/: light_sheet.py  sheet_app.py
juno/ui/: BeamCreation.py  BeamCreator.py  ElementCreation.py  JunoLauncher.py  LensCreator.py  LensSimulation.py  ParameterSweep.py  SimulationRun.py  SimulationSetup.py  VisualiseResults.py  main.py
juno/ui/qtdesigner_files/: BeamCreation.py  BeamCreation.ui  ElementCreation.py  ElementCreation.ui  JunoLauncher.py  JunoLauncher.ui  LensSimulation.py  LensSimulation.ui  SimulationSetup.py  SimulationSetup.ui  VisualiseResults.py  VisualiseResults.ui
site/: 404.html  index.html  sitemap.xml
site/Configuration/: index.html
site/Documentation/: index.html
site/TUTORIAL/: index.html
site/reference/: index.html
site/started/: index.html
src/lens_simulation/: AxiconLine.ipynb  AxiconLine_M.py  Beam.py  Beams.ipynb  Beams_M.py  Lens.py  Medium.py  Simulation.py  SimulationRunner.py  SimulationUtils.py  app.py  beam.py  beam_app.py  beam_integration.ipynb  clean_sheet.py  config.yaml  config_2.yaml  config_minimum.yaml  constants.py  default.yaml  escape_path.ipynb  example.py  example_sim.py  herschel.ipynb  lens_app.py  light_sheet.py  magic_test.py  main.py  notebook.ipynb  notebook_david copy.ipynb  notebook_david.ipynb  plotting.py  refractors.ipynb  run_app.py  run_simulation.py  set_focal_distance.ipynb  sheet_app.py  simulation.ipynb  structures.py  sweep.yml  (+2 more)
src/lens_simulation/Lens Configs/: example_lens.yaml
src/lens_simulation/UI/: BeamCreator.py  LensCreator.py  LensSimulation.py  ParameterSweep.py  SimulationRun.py  SimulationSetup.py  VisualiseResults.py  main.py
src/lens_simulation/ui/: main.py  (+5 more)
src/star_glass/: Lens.py  Simulation.py  SimulationRunner.py  beam.py  default.yaml  notebook.ipynb  plotting.py  run_simulation.py  structures.py  utils.py  validation.py
started/: index.html
tests/: test_Lens.py  test_ParameterSweepUI.py  test_Simulation.py  test_SimulationRunner.py  test_beam.py  test_config.yaml  test_config_with_sweep.yaml  test_example.py  test_utils.py  test_validation.py
(+69 files in other folders)
