[metadata]
name = star-glass
version = 0.0.1
author = David Dierickx, Patrick Cleeve
author_email = David.Dierickx1@monash.edu, Patrick.Cleeve@monash.edu
description = star-glass is python package for designing lenses by performing full wave simulations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeMarcoLab/lens_simulations
project_urls =
    Bug Tracker = https://github.com/DeMarcoLab/lens_simulations/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src