[metadata]
name = juno
version = 0.0.1
author = David Dierickx, Patrick Cleeve
author_email = David.Dierickx1@monash.edu, Patrick.Cleeve@monash.edu
description = juno is python package for designing lenses by performing full wave simulations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeMarcoLab/juno
project_urls =
    Bug Tracker = https://github.com/DeMarcoLab/juno/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    juno = juno.run_simulation:main
    juno_ui = juno.ui.main:main
    